fix(CSS): larger buttons for finishes on mobile

--- a/res/www/inc/css/default.css
+++ b/res/www/inc/css/default.css
@@ -2650,6 +2650,13 @@ table.sailors-table {
         margin: 15px 0;
     }
 
+    .finishes-widget-options {
+        width: 100%;
+    }
+
+    .finishes-widget-options td {
+        height: 3em;
+    }
 }
 
 /*
